Mon Nov 17 17:26:40 1997  Laurent Pautet  <pautet@esmeralda.enst.fr>

	* xe_stubs.adb: Fix incorrect test which skipped a debugging
 	message.

	* xe_check.adb: Search through unit U hierarchy to find a RCI
 	parent and check whether this unit is configured on its child
 	partition. Fix 4814-G01.

	* xe_back.adb: Change Get_Parent to return No_Name when there is
	no parent.

Thu Oct 30 15:52:37 1997  Samuel Tardieu  <sam@inf.enst.fr>

	* xe_check.adb: Pass the value of -jN flag to Compile_Sources.

Wed Oct 29 19:28:51 1997  Samuel Tardieu  <sam@inf.enst.fr>

	* gnatdist.in: Use EXTRA_LIBS from configure.

Wed Oct 29 19:11:39 1997  Laurent Pautet  <pautet@scapin.enst.fr>

	* xe_utils.adb, xe_utils.ads: Remove unused subprograms (basically
 	xe-gcc stuff). Change function Strip_Uname_Suffix into U_To_N.

	* xe_stubs.adb: Change to new stub generation. Handle generic
 	packages.

Fri Oct 24 17:49:16 1997  Laurent Pautet  <pautet@esmeralda.enst.fr>

	* xe_utils.ads: Add a procedure Free (to deallocate a
 	string_access variable). Add Configuration parameter in procedure
 	Produce_Partition_Executable (compilation, binding and linking are
 	executed in current directory and no longer in
 	dsa/<conf>/<part>). Add Object parameter in Compile_RCI_Receiver
 	and Compile_RCI_Caller for same reason.

	* xe_utils.adb: Add -x ada systematically. Add -o <object>
 	systematically to save object file in place. Compile, bind and
 	link in current directory to honor gnat.adc.

	* xe_stubs.adb: Use previous changes and honor gnat.adc. Fix
 	4617-G02.

Thu Oct 23 09:58:06 1997  Laurent Pautet  <pautet@esmeralda.enst.fr>

	* xe_stubs.adb: Bad command order. Fix a problem with 0003-G00.

	* xe_back.adb, xe_back.ads: Add new procedure Get_Parent
	which extracts the root parent from a unit name.

	* xe_check.adb: Check that a RCI package and its children are on
 	the same partition. Fix 0002-G09.

Fri Oct 17 18:37:08 1997  Laurent Pautet  <pautet@esmeralda.enst.fr>
