@@ -3,9 +3,8 @@ with Ada.Streams; use Ada.Streams;
 with System.Garlic.Filters;
 pragma Elaborate (System.Garlic.Filters);
 
-with System.Garlic.Utils;
-
-use System.Garlic.Utils;
+with System.Garlic.Utils;   use System.Garlic.Utils;
+with System.Garlic.Streams; use System.Garlic.Streams;
 
 package body System.Garlic.Filters.Double is
 
@@ -26,9 +25,9 @@ package body System.Garlic.Filters.Double is
      (Filter : in     No_Filter;
       Params : in     Filter_Params_Access;
       Stream : access System.RPC.Params_Stream_Type)
-      return Stream_Element_Array is
-      R : Stream_Element_Array  := To_Stream_Element_Array (Stream);
-      D : Stream_Element_Array  := R & R;
+      return Stream_Element_Access is
+      R : Stream_Element_Access  := To_Stream_Element_Access (Stream);
+      D : Stream_Element_Access  := new Stream_Element_Array'(R.all & R.all);
    begin
       for I in R'Range loop
          D (D'First + (I - D'First) * 2)     := Stream_Element'First;
@@ -45,13 +44,13 @@ package body System.Garlic.Filters.Double is
      (Filter : in No_Filter;
       Params : in Filter_Params_Access;
       Stream : in Ada.Streams.Stream_Element_Array)
-      return Stream_Element_Array is
-      R : Stream_Element_Array  := Stream;
+      return Stream_Element_Access is
+      R : Stream_Element_Access := new Stream_Element_Array'(Stream);
    begin
       for I in R'Range loop
          R ((I - R'First) / 2 + R'First) := R (I);
       end loop;
-      return R (R'First .. (R'First + R'Last) / 2);
+      return new Stream_Element_Array'(R (R'First .. (R'First + R'Last) / 2));
    end Filter_Incoming;
 
    ---------------------
@@ -92,11 +91,11 @@ package body System.Garlic.Filters.Double is
    function Filter_Params_Write
      (Filter : No_Filter;
       P : Filter_Params_Access) return
-      Ada.Streams.Stream_Element_Array is
+      Streams.Stream_Element_Access is
       S : aliased System.RPC.Params_Stream_Type (32);
    begin
       No_Filter_Params'Write (S'Access, No_Filter_Params (P.all));
-      return To_Stream_Element_Array (S'Access);
+      return To_Stream_Element_Access (S'Access);
    end Filter_Params_Write;
 
    --------------
