@@ -3,9 +3,8 @@ with Ada.Streams; use Ada.Streams;
 with System.Garlic.Filters;
 pragma Elaborate (System.Garlic.Filters);
 
-with System.Garlic.Utils;
-
-use System.Garlic.Utils;
+with System.Garlic.Utils;   use System.Garlic.Utils;
+with System.Garlic.Streams; use System.Garlic.Streams;
 
 package body System.Garlic.Filters.Reversing is
 
@@ -26,8 +25,8 @@ package body System.Garlic.Filters.Reversing is
      (Filter : in     No_Filter;
       Params : in     Filter_Params_Access;
       Stream : access System.RPC.Params_Stream_Type)
-      return Stream_Element_Array is
-      Result  : Stream_Element_Array  := To_Stream_Element_Array (Stream);
+      return Stream_Element_Access is
+      Result  : Stream_Element_Access  := To_Stream_Element_Access (Stream);
    begin
       for I in Result'Range loop
          Result (I) := Stream_Element'Last - Result (I);
@@ -43,8 +42,8 @@ package body System.Garlic.Filters.Reversing is
      (Filter : in No_Filter;
       Params : in Filter_Params_Access;
       Stream : in Ada.Streams.Stream_Element_Array)
-      return Stream_Element_Array is
-      Result  : Stream_Element_Array := Stream;
+      return Stream_Element_Access is
+      Result  : Stream_Element_Access := new Stream_Element_Array'(Stream);
    begin
       for I in Result'Range loop
          Result (I) := Stream_Element'Last - Result (I);
@@ -90,11 +89,11 @@ package body System.Garlic.Filters.Reversing is
    function Filter_Params_Write
      (Filter : No_Filter;
       P : Filter_Params_Access) return
-      Ada.Streams.Stream_Element_Array is
+      Streams.Stream_Element_Access is
       S : aliased System.RPC.Params_Stream_Type (32);
    begin
       No_Filter_Params'Write (S'Access, No_Filter_Params (P.all));
-      return To_Stream_Element_Array (S'Access);
+      return To_Stream_Element_Access (S'Access);
    end Filter_Params_Write;
 
    --------------
