@@ -1,3 +1,11 @@
+Tue Nov 18 19:55:03 1997  Laurent Pautet  <pautet@esmeralda.enst.fr>
+
+	* xe_check.adb: Fix incorrect test concerning configuration of
+	generic unit.
+
+	* xe_stubs.adb: Fix incorrect caller object filename. Should be
+ 	computed from source spec file name (gnat.adc).
+
 Mon Nov 17 17:26:40 1997  Laurent Pautet  <pautet@esmeralda.enst.fr>
 
 	* xe_stubs.adb: Fix incorrect test which skipped a debugging
